v0.3.9:
    - Added fix (optional, enabled by default) for the weird vanilla behavior where levels 12E-13B are always forced to use the "No Yoshi Sign 2" intro regardless of their tileset (which can also mess up custom "No Yoshi Intro" patches).

v0.3.8:
    - Made possible to use tiles in SP3/SP4 for the Retry prompt (just add $100 to the tile numbers in the settings).
    - Fixed camera position sometimes being inconsistent between loading a level normally and reloading it with Retry (thanks to schema_tuna for reporting and fixing this).
    - Optimized ram.asm (cleaner, faster compilation time).

v0.3.7:
    - Fixed collected invisible 1-UPs not resetting on death, which would allow to skip some of them after respawning (when not collecting them all).
    - Fixed scroll sprites speeds not resetting on death (thanks to LouisDoucet for reporting this).
    - Small refactor of addresses reset code on death.
    - Added fix (optional, enabled by default) for the bug where Mario's lives don't cap at 99 when the status bar is nuked (this usually causes the Overworld to display a glitched amount and makes Mario have a halo).
    - Fixed issue where if a level is placed on the very left edge of the Overworld (beneath where the vanilla border is), then Retry would respawn you in level 0 when dying in that level (thanks to LouisDoucet for reporting this).
    - Added compatibility with the "Level Depending on Event" and "Level Depending on Ram Address" patches: now Retry respawning and checkpoints will work correctly when in the new levels! (as an added bonus, it adds midway support to those patches, since they don't quite work originally).
    - Actually fixed the intro level bug from v0.3.4, which also fixes the mosaic effect not appearing when respawning in it.

v0.3.6:
    - Made so the Retry prompt shows up immediately when falling in a pit and not using !fast_prompt = 1.